Minor spacing fixes

--- a/app/assets/stylesheets/_cerberus.css.scss
+++ b/app/assets/stylesheets/_cerberus.css.scss
@@ -9,6 +9,10 @@
   padding-bottom: 15px;
 }
 
+.select-gap {
+  margin-top: 5px;
+}
+
 // .search_q {
 //   height: auto;
 // }
